// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutcomeChip render fail 1`] = `
<DocumentFragment>
  <span
    class="outcome-chip outcome-chip-fail"
    title="4 Failed"
  >
    <span
      class="icon"
    >
      <mock-outcomeicon
        outcometype="fail"
      />
    </span>
    <span
      aria-hidden="true"
      class="count"
      data-automation-id="count"
    >
       4
    </span>
    <span
      class="screen-reader-only"
    >
      4 Failed
    </span>
  </span>
</DocumentFragment>
`;

exports[`OutcomeChip render fail: OutcomeIcon props 1`] = `
{
  "outcomeType": "fail",
}
`;

exports[`OutcomeChip render inapplicable 1`] = `
<DocumentFragment>
  <span
    class="outcome-chip outcome-chip-inapplicable"
    title="4 Not applicable"
  >
    <span
      class="icon"
    >
      <mock-outcomeicon
        outcometype="inapplicable"
      />
    </span>
    <span
      aria-hidden="true"
      class="count"
      data-automation-id="count"
    >
       4
    </span>
    <span
      class="screen-reader-only"
    >
      4 Not applicable
    </span>
  </span>
</DocumentFragment>
`;

exports[`OutcomeChip render inapplicable: OutcomeIcon props 1`] = `
{
  "outcomeType": "inapplicable",
}
`;

exports[`OutcomeChip render incomplete 1`] = `
<DocumentFragment>
  <span
    class="outcome-chip outcome-chip-incomplete"
    title="2 Incomplete"
  >
    <span
      class="icon"
    >
      <mock-outcomeicon
        outcometype="incomplete"
      />
    </span>
    <span
      aria-hidden="true"
      class="count"
      data-automation-id="count"
    >
       2
    </span>
    <span
      class="screen-reader-only"
    >
      2 Incomplete
    </span>
  </span>
</DocumentFragment>
`;

exports[`OutcomeChip render incomplete: OutcomeIcon props 1`] = `
{
  "outcomeType": "incomplete",
}
`;

exports[`OutcomeChip render pass 1`] = `
<DocumentFragment>
  <span
    class="outcome-chip outcome-chip-pass"
    title="3 Passed"
  >
    <span
      class="icon"
    >
      <mock-outcomeicon
        outcometype="pass"
      />
    </span>
    <span
      aria-hidden="true"
      class="count"
      data-automation-id="count"
    >
       3
    </span>
    <span
      class="screen-reader-only"
    >
      3 Passed
    </span>
  </span>
</DocumentFragment>
`;

exports[`OutcomeChip render pass: OutcomeIcon props 1`] = `
{
  "outcomeType": "pass",
}
`;
